LOG New version 4.11.1

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "kppp-4.11.0.tar.xz": 5322ed6fe8122940f618c04dd51c6dbff7b9f437
+  kppp-4.11.1.tar.xz: d449204769f62aa5c9093579207bd3fbb62e358e
